WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140671
[gstreamer] Fix expression result unused warning in GRefPtrGStreamer.cpp
https://bugs.webkit.org/show_bug.cgi?id=140671
Summary
[gstreamer] Fix expression result unused warning in GRefPtrGStreamer.cpp
Csaba Osztrogonác
Reported
2015-01-20 03:48:50 PST
warning: ../../Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp:251:9: warning: expression result unused [-Wunused-value] (GstToc*)gst_mini_object_ref(((GstMiniObject*)(ptr))); ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Attachments
Patch
(1.27 KB, patch)
2015-01-20 03:50 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Patch
(1.34 KB, patch)
2015-01-20 07:28 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-01-20 03:50:17 PST
Created
attachment 244982
[details]
Patch
Philippe Normand
Comment 2
2015-01-20 06:53:44 PST
Is this the only fix possible? Don't we have some macro in WTF about this?
Csaba Osztrogonác
Comment 3
2015-01-20 07:00:51 PST
(In reply to
comment #2
)
> Is this the only fix possible? Don't we have some macro in WTF about this?
I haven't found.
Philippe Normand
Comment 4
2015-01-20 07:07:36 PST
Ok not sure it'd be worth adding anyway :)
Philippe Normand
Comment 5
2015-01-20 07:14:20 PST
Comment on
attachment 244982
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=244982&action=review
> Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp:251 > - gst_toc_ref(ptr); > + (void)gst_toc_ref(ptr);
Actually we could return the result value here, return gst_toc_ref(ptr);
Csaba Osztrogonác
Comment 6
2015-01-20 07:28:01 PST
Created
attachment 244991
[details]
Patch
WebKit Commit Bot
Comment 7
2015-01-20 08:24:06 PST
Comment on
attachment 244991
[details]
Patch Clearing flags on attachment: 244991 Committed
r178711
: <
http://trac.webkit.org/changeset/178711
>
WebKit Commit Bot
Comment 8
2015-01-20 08:24:11 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug