[gstreamer] Fix expression result unused warning in GRefPtrGStreamer.cpp https://bugs.webkit.org/show_bug.cgi?id=140671

Reviewed by Philippe Normand.

* platform/graphics/gstreamer/GRefPtrGStreamer.cpp:
(WTF::refGPtr<GstToc>):


Canonical link: https://commits.webkit.org/158640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178711 268f45cc-cd09-0410-ab3c-d52691b4dbfc